syntax = "proto3";

package event.v1;

option go_package = "erp.localhost/internal/infra/model/event/v1;eventv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "tagger/tagger.proto";

// =============================================================================
// MongoDB Models (for database persistence)
// =============================================================================

// Audit log categories
enum AuditCategory {
  AUDIT_CATEGORY_UNSPECIFIED = 0;
  AUDIT_CATEGORY_AUTH = 1;
  AUDIT_CATEGORY_USER_MGMT = 2;
  AUDIT_CATEGORY_ROLE_MGMT = 3;
  AUDIT_CATEGORY_ORDER = 4;
  AUDIT_CATEGORY_PRODUCT = 5;
  AUDIT_CATEGORY_INVENTORY = 6;
  AUDIT_CATEGORY_VENDOR = 7;
  AUDIT_CATEGORY_CUSTOMER = 8;
  AUDIT_CATEGORY_CONFIG = 9;
  AUDIT_CATEGORY_TENANT = 10;
  AUDIT_CATEGORY_SECURITY = 11;
  AUDIT_CATEGORY_DATA_ACCESS = 12;
  AUDIT_CATEGORY_INTEGRATION = 13;
  AUDIT_CATEGORY_API = 14;
}

// Audit log actions
enum AuditAction {
  AUDIT_ACTION_UNSPECIFIED = 0;
  // Auth actions
  AUDIT_ACTION_LOGIN = 1;
  AUDIT_ACTION_LOGOUT = 2;
  AUDIT_ACTION_LOGOUT_ALL = 3;
  AUDIT_ACTION_TOKEN_REFRESH = 4;
  AUDIT_ACTION_TOKEN_REVOKE = 5;
  AUDIT_ACTION_PASSWORD_CHANGED = 6;
  AUDIT_ACTION_PASSWORD_RESET = 7;
  AUDIT_ACTION_FORCED_LOGOUT = 8;
  // User management actions
  AUDIT_ACTION_USER_CREATED = 9;
  AUDIT_ACTION_USER_UPDATED = 10;
  AUDIT_ACTION_USER_DELETED = 11;
  AUDIT_ACTION_USER_SUSPENDED = 12;
  AUDIT_ACTION_USER_ACTIVATED = 13;
  AUDIT_ACTION_USER_LOCKED = 14;
  AUDIT_ACTION_USER_UNLOCKED = 15;
  // Role management actions
  AUDIT_ACTION_ROLE_CREATED = 16;
  AUDIT_ACTION_ROLE_UPDATED = 17;
  AUDIT_ACTION_ROLE_DELETED = 18;
  AUDIT_ACTION_ROLE_ASSIGNED = 19;
  AUDIT_ACTION_ROLE_REVOKED = 20;
  AUDIT_ACTION_PERMISSIONS_ADDED = 21;
  AUDIT_ACTION_PERMISSIONS_REMOVED = 22;
  // Order actions
  AUDIT_ACTION_ORDER_CREATED = 23;
  AUDIT_ACTION_ORDER_UPDATED = 24;
  AUDIT_ACTION_ORDER_CANCELLED = 25;
  AUDIT_ACTION_ORDER_FULFILLED = 26;
  AUDIT_ACTION_ORDER_SHIPPED = 27;
  AUDIT_ACTION_ORDER_DELIVERED = 28;
  AUDIT_ACTION_ORDER_RETURNED = 29;
  AUDIT_ACTION_ORDER_REFUNDED = 30;
  // Product/Inventory actions
  AUDIT_ACTION_PRODUCT_CREATED = 31;
  AUDIT_ACTION_PRODUCT_UPDATED = 32;
  AUDIT_ACTION_PRODUCT_DELETED = 33;
  AUDIT_ACTION_STOCK_ADJUSTED = 34;
  AUDIT_ACTION_STOCK_TRANSFERRED = 35;
  AUDIT_ACTION_PRICE_CHANGED = 36;
  // Vendor/Customer actions
  AUDIT_ACTION_VENDOR_CREATED = 37;
  AUDIT_ACTION_VENDOR_UPDATED = 38;
  AUDIT_ACTION_CUSTOMER_CREATED = 39;
  AUDIT_ACTION_CUSTOMER_UPDATED = 40;
  // Config actions
  AUDIT_ACTION_CONFIG_CREATED = 41;
  AUDIT_ACTION_CONFIG_UPDATED = 42;
  AUDIT_ACTION_CONFIG_DELETED = 43;
  AUDIT_ACTION_FEATURE_FLAG_ENABLED = 44;
  AUDIT_ACTION_FEATURE_FLAG_DISABLED = 45;
  // Tenant actions
  AUDIT_ACTION_TENANT_CREATED = 46;
  AUDIT_ACTION_TENANT_UPDATED = 47;
  AUDIT_ACTION_TENANT_SUSPENDED = 48;
  AUDIT_ACTION_TENANT_ACTIVATED = 49;
  // Security actions
  AUDIT_ACTION_BRUTE_FORCE_DETECTED = 50;
  AUDIT_ACTION_SUSPICIOUS_ACTIVITY = 51;
  AUDIT_ACTION_UNAUTHORIZED_ACCESS = 52;
  AUDIT_ACTION_TOKEN_THEFT_SUSPECTED = 53;
  AUDIT_ACTION_MASS_DATA_EXPORT = 54;
  // Data access actions
  AUDIT_ACTION_PII_VIEWED = 55;
  AUDIT_ACTION_PII_EXPORTED = 56;
  AUDIT_ACTION_PII_DELETED = 57;
  AUDIT_ACTION_GDPR_DATA_EXPORT = 58;
  AUDIT_ACTION_RIGHT_TO_BE_FORGOTTEN = 59;
}

// Actor types
enum ActorType {
  ACTOR_TYPE_UNSPECIFIED = 0;
  ACTOR_TYPE_USER = 1;
  ACTOR_TYPE_SYSTEM = 2;
  ACTOR_TYPE_API_KEY = 3;
  ACTOR_TYPE_CRON = 4;
}

// Audit severity levels
enum AuditSeverity {
  AUDIT_SEVERITY_UNSPECIFIED = 0;
  AUDIT_SEVERITY_INFO = 1;
  AUDIT_SEVERITY_WARNING = 2;
  AUDIT_SEVERITY_ERROR = 3;
  AUDIT_SEVERITY_CRITICAL = 4;
}

// Audit result
enum AuditResult {
  AUDIT_RESULT_UNSPECIFIED = 0;
  AUDIT_RESULT_SUCCESS = 1;
  AUDIT_RESULT_FAILURE = 2;
  AUDIT_RESULT_PARTIAL = 3;
}

// Target types
enum TargetType {
  TARGET_TYPE_UNSPECIFIED = 0;
  TARGET_TYPE_USER = 1;
  TARGET_TYPE_ROLE = 2;
  TARGET_TYPE_PERMISSION = 3;
  TARGET_TYPE_ORDER = 4;
  TARGET_TYPE_PRODUCT = 5;
  TARGET_TYPE_VENDOR = 6;
  TARGET_TYPE_CUSTOMER = 7;
  TARGET_TYPE_CONFIG = 8;
  TARGET_TYPE_TENANT = 9;
  TARGET_TYPE_SESSION = 10;
  TARGET_TYPE_TOKEN = 11;
}

// AuditLog represents an audit log entry
// Stored in MongoDB events_db.audit_logs collection
message AuditLog {
  // Identity
  string id = 1 [(tagger.tags) = "bson:\"_id\" json:\"id\""];
  string tenant_id = 2 [(tagger.tags) = "bson:\"tenant_id,omitempty\" json:\"tenant_id,omitempty\""];
  google.protobuf.Timestamp timestamp = 3 [(tagger.tags) = "bson:\"timestamp\" json:\"timestamp\""];

  // Event Classification
  string category = 4 [(tagger.tags) = "bson:\"category\" json:\"category\""];
  string action = 5 [(tagger.tags) = "bson:\"action\" json:\"action\""];
  string severity = 6 [(tagger.tags) = "bson:\"severity\" json:\"severity\""];

  // Actor (who did it)
  string actor_id = 7 [(tagger.tags) = "bson:\"actor_id,omitempty\" json:\"actor_id,omitempty\""];
  string actor_type = 8 [(tagger.tags) = "bson:\"actor_type,omitempty\" json:\"actor_type,omitempty\""];
  string actor_name = 9 [(tagger.tags) = "bson:\"actor_name,omitempty\" json:\"actor_name,omitempty\""];

  // Target (what was affected)
  string target_id = 10 [(tagger.tags) = "bson:\"target_id,omitempty\" json:\"target_id,omitempty\""];
  string target_type = 11 [(tagger.tags) = "bson:\"target_type,omitempty\" json:\"target_type,omitempty\""];
  string target_name = 12 [(tagger.tags) = "bson:\"target_name,omitempty\" json:\"target_name,omitempty\""];

  // Changes (what changed)
  Changes changes = 13 [(tagger.tags) = "bson:\"changes,omitempty\" json:\"changes,omitempty\""];

  // Context
  AuditContext context = 14 [(tagger.tags) = "bson:\"context,omitempty\" json:\"context,omitempty\""];

  // Result
  string result = 15 [(tagger.tags) = "bson:\"result\" json:\"result\""];
  string message = 16 [(tagger.tags) = "bson:\"message,omitempty\" json:\"message,omitempty\""];
  string error = 17 [(tagger.tags) = "bson:\"error,omitempty\" json:\"error,omitempty\""];

  // Flexible metadata for type-specific data
  google.protobuf.Struct metadata = 18 [(tagger.tags) = "bson:\"metadata,omitempty\" json:\"metadata,omitempty\""];
}

message Changes {
  // Field-level changes
  map<string, FieldChange> fields = 1 [(tagger.tags) = "bson:\"fields,omitempty\" json:\"fields,omitempty\""];

  // Collection changes (for arrays)
  repeated string added = 2 [(tagger.tags) = "bson:\"added,omitempty\" json:\"added,omitempty\""];
  repeated string removed = 3 [(tagger.tags) = "bson:\"removed,omitempty\" json:\"removed,omitempty\""];

  // State transition
  string status_from = 4 [(tagger.tags) = "bson:\"status_from,omitempty\" json:\"status_from,omitempty\""];
  string status_to = 5 [(tagger.tags) = "bson:\"status_to,omitempty\" json:\"status_to,omitempty\""];
}

message FieldChange {
  google.protobuf.Value old_value = 1 [(tagger.tags) = "bson:\"old_value,omitempty\" json:\"old_value,omitempty\""];
  google.protobuf.Value new_value = 2 [(tagger.tags) = "bson:\"new_value,omitempty\" json:\"new_value,omitempty\""];
}

message AuditContext {
  string ip_address = 1 [(tagger.tags) = "bson:\"ip_address,omitempty\" json:\"ip_address,omitempty\""];
  string user_agent = 2 [(tagger.tags) = "bson:\"user_agent,omitempty\" json:\"user_agent,omitempty\""];
  string location = 3 [(tagger.tags) = "bson:\"location,omitempty\" json:\"location,omitempty\""];
  string session_id = 4 [(tagger.tags) = "bson:\"session_id,omitempty\" json:\"session_id,omitempty\""];
  string request_id = 5 [(tagger.tags) = "bson:\"request_id,omitempty\" json:\"request_id,omitempty\""];
  string api_endpoint = 6 [(tagger.tags) = "bson:\"api_endpoint,omitempty\" json:\"api_endpoint,omitempty\""];
  google.protobuf.Struct extra = 7 [(tagger.tags) = "bson:\"extra,omitempty\" json:\"extra,omitempty\""];
}
